--- a/package.json
+++ b/package.json
@@ -1,17 +1,8 @@
 {
   "dependencies": {
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mysql2": "^3.15.2"
-  },
-  "name": "p6",
-  "version": "1.0.0",
-  "description": "Practica para el uso de Git Hub",
-  "main": "index.js",
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Jonathan Ortiz",
-  "license": "ISC"
+  }
 }
